--- a/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Dialogbox/Detailspopup.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Dialogbox/Detailspopup.css
@@ -29,3 +29,27 @@
     background: none;
     cursor: pointer;
 }
+
+@media only screen and (min-width:319px) and (max-width:400px){
+    .create-content{
+        width: 80%;
+    }
+}
+
+@media only screen and (min-width:401px) and (max-width:500px){
+    .create-content{
+        width: 60%;
+    }
+}
+
+@media only screen and (min-width:501px) and (max-width:700px){
+    .create-content{
+        width: 55%;
+    }
+}
+
+@media only screen and (min-width:701px) and (max-width:800px){
+    .create-content{
+        width: 40%;
+    }
+}
