--- a/Insurance-app-main/src/Components/Login/Login.css
+++ b/Insurance-app-main/src/Components/Login/Login.css
@@ -76,7 +76,7 @@
     .button-container .button-group {
         width: 180px;
     }
-    .form-control
+    .form-control-login
     {
         height: 35px;
         font-size: 25px;
