--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Dialogbox/Userpage.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Dialogbox/Userpage.css
@@ -12,8 +12,8 @@
 }
 
 .dialog-content{
-    max-width: 30%;
-    max-height: 70%;
+    width: 30%;
+    height: 70%;
     background: white;
     border-radius: 15px;
     position: relative;
@@ -28,4 +28,28 @@
     font-size: 1.5rem;
     background: none;
     cursor: pointer;
+}
+
+@media only screen and (min-width:319px) and (max-width:400px){
+    .dialog-content{
+        width: 80%;
+    }
+}
+
+@media only screen and (min-width:401px) and (max-width:500px){
+    .dialog-content{
+        width: 60%;
+    }
+}
+
+@media only screen and (min-width:501px) and (max-width:700px){
+    .dialog-content{
+        width: 55%;
+    }
+}
+
+@media only screen and (min-width:701px) and (max-width:800px){
+    .dialog-content{
+        width: 40%;
+    }
 }
