--- a/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Dialogbox/Deletebox.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Dialogbox/Deletebox.css
@@ -74,3 +74,87 @@
     justify-content: center;
     gap: 30px;
 }
+
+@media only screen and (min-width:319px) and (max-width:400px){
+    .deletedialog-content{
+        width: 70%;
+    }
+    .delete-confirmbox p{
+        font-size: 16px;
+        padding: 5px;
+    }
+    .delete-box .delete-confirm-btn{
+        padding: 5px;
+        width: 30%;
+        font-size: 14px;
+    }
+    
+    .delete-box .delete-cancel-btn{
+        padding: 5px;
+        width: 30%;
+        font-size: 14px;
+    } 
+}
+
+@media only screen and (min-width:401px) and (max-width:500px){
+    .deletedialog-content{
+        width: 50%;
+    }
+    .delete-confirmbox p{
+        font-size: 19px;
+        padding: 5px;
+    }
+    .delete-box .delete-confirm-btn{
+        padding: 7px;
+        width: 35%;
+        font-size: 16px;
+    }
+    
+    .delete-box .delete-cancel-btn{
+        padding: 5px;
+        width: 35%;
+        font-size: 16px;
+    }
+}
+
+@media only screen and (min-width:501px) and (max-width:700px){
+    .deletedialog-content{
+        width: 40%;
+    }
+    .delete-confirmbox p{
+        font-size: 19px;
+        padding: 5px;
+    }
+    .delete-box .delete-confirm-btn{
+        padding: 5px;
+        width: 35%;
+        font-size: 16px;
+    }
+    
+    .delete-box .delete-cancel-btn{
+        padding: 5px;
+        width: 35%;
+        font-size: 16px;
+    }
+}
+
+@media only screen and (min-width:701px) and (max-width:1024px){
+    .deletedialog-content{
+        width: 30%;
+    }
+    .delete-confirmbox p{
+        font-size: 19px;
+        padding: 5px;
+    }
+    .delete-box .delete-confirm-btn{
+        padding: 5px;
+        width: 35%;
+        font-size: 16px;
+    }
+    
+    .delete-box .delete-cancel-btn{
+        padding: 5px;
+        width: 35%;
+        font-size: 16px;
+    }
+}
