--- a/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Dialogbox/Updatebox.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Dialogbox/Updatebox.css
@@ -13,7 +13,7 @@
 
 .form-content{
     width: 28%;
-    height: 95%;
+    height: 70%;
     position: relative;
     padding: 16px;
     background: white;
@@ -29,139 +29,31 @@
     position: absolute;
     cursor: pointer;
 }
-@media screen and (min-width: 775px) and (max-width: 1024px)
-{
-    .form-overlay{
-        width: 100%;
-        height: 100%;
-        background: rgba(0,0, 0, 0.7);
-        position: fixed;
-        top: 0;
-        left: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 1000;
-    }
-    
+
+@media only screen and (min-width:319px) and (max-width:400px){
     .form-content{
-        width: 30%;
-        height: 94%;
-        position: relative;
-        padding: 8px;
-        background: white;
-        border-radius: 15px;
-    }
-    
-    .btn-form{
-        background: none;
-        border: none;
-        font-size: 1.5rem;
-        top: 10px;
-        right: 10px;
-        position: absolute;
-        cursor: pointer;
+        width: 80%;
+        height: 70%;
     }
 }
-@media screen and (min-width: 435px) and (max-width: 770px) {
-    .form-overlay{
-        width: 100%;
-        height: 100%;
-        background: rgba(0,0, 0, 0.7);
-        position: fixed;
-        top: 0;
-        left: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 1000;
-    }
-    
+
+@media only screen and (min-width:401px) and (max-width:500px){
     .form-content{
-        width: 30%;
-        height: 94%;
-        position: relative;
-        padding: 3px;
-        background: white;
-        border-radius: 15px;
+        width: 60%;
+        height: 70%;
     }
-    
-    .btn-form{
-        background: none;
-        border: none;
-        font-size: 1.5rem;
-        top: 10px;
-        right: 10px;
-        position: absolute;
-        cursor: pointer;
-    }
-  
 }
-@media screen and (min-width: 370px) and (max-width: 430px) {
-    .form-overlay{
-        width: 100%;
-        height: 100%;
-        background: rgba(0,0, 0, 0.7);
-        position: fixed;
-        top: 0;
-        left: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 1000;
-    }
-    
+
+@media only screen and (min-width:501px) and (max-width:700px){
     .form-content{
         width: 55%;
-        height: 92%;
-        position: relative;
-        padding: 10px;
-        background: white;
-        border-radius: 13px;
-    }
-    
-    .btn-form{
-        background: none;
-        border: none;
-        font-size: 1.5rem;
-        top: 10px;
-        right: 10px;
-        position: absolute;
-        cursor: pointer;
-    }
-  
-}
-@media screen and (min-width: 100px) and (max-width: 365px) {
-    .form-overlay{
-        width: 100%;
-        height: 100%;
-        background: rgba(0,0, 0, 0.7);
-        position: fixed;
-        top: 0;
-        left: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 1000;
-    }
-    
-    .form-content{
-        width: 50%;
         height: 70%;
-        position: relative;
-        padding: 16px;
-        background: white;
-        border-radius: 15px;
     }
-    
-    .btn-form{
-        background: none;
-        border: none;
-        font-size: 1.5rem;
-        top: 10px;
-        right: 10px;
-        position: absolute;
-        cursor: pointer;
+}
+
+@media only screen and (min-width:701px) and (max-width:1024px){
+    .form-content{
+        width: 40%;
+        height: 70%;
     }
-  
 }
