--- a/Insurance-app-main/src/Components/Dashboard/Dialogbox/UserDialog.css
+++ b/Insurance-app-main/src/Components/Dashboard/Dialogbox/UserDialog.css
@@ -74,3 +74,91 @@
     justify-content: center;
     gap: 30px;
 }
+
+@media only screen and (min-width:319px) and (max-width:400px){
+    .userdialog-content{
+        width: 70%;
+        height: 22%;
+    }
+    .user-confirmbox p{
+        font-size: 16px;
+        padding: 5px;
+    }
+    .user-box .user-confirm-btn{
+        padding: 5px;
+        width: 35%;
+        font-size: 14px;
+    }
+    
+    .user-box .user-cancel-btn{
+        padding: 5px;
+        width: 35%;
+        font-size: 14px;
+    } 
+}
+
+@media only screen and (min-width:401px) and (max-width:500px){
+    .userdialog-content{
+        width: 70%;
+        height: 22%;
+    }
+    .user-confirmbox p{
+        font-size: 16px;
+        padding: 5px;
+    }
+    .user-box .user-confirm-btn{
+        padding: 7px;
+        width: 37%;
+        font-size: 14px;
+    }
+    
+    .user-box .user-cancel-btn{
+        padding: 5px;
+        width: 37%;
+        font-size: 14px;
+    }
+}
+
+@media only screen and (min-width:501px) and (max-width:700px){
+    .userdialog-content{
+        width: 55%;
+        height: 23%;
+    }
+    .user-confirmbox p{
+        font-size: 19px;
+        padding: 5px;
+    }
+    .user-box .user-confirm-btn{
+        padding: 7px;
+        width: 35%;
+        font-size: 16px;
+    }
+    
+    .user-box .user-cancel-btn{
+        padding: 7px;
+        width: 35%;
+        font-size: 16px;
+    }
+}
+
+@media only screen and (min-width:701px) and (max-width:1024px){
+    .userdialog-content{
+        width: 40%;
+        height: 25%;
+    }
+    .user-confirmbox p{
+        font-size: 19px;
+        padding: 5px;
+    }
+    .user-box .user-confirm-btn{
+        padding: 8px;
+        width: 35%;
+        font-size: 16px;
+    }
+    
+    .user-box .user-cancel-btn{
+        padding: 8px;
+        width: 35%;
+        font-size: 16px;
+    }
+}
