--- a/Insurance-app-main/src/Components/Dashboard/Userdata.css
+++ b/Insurance-app-main/src/Components/Dashboard/Userdata.css
@@ -51,6 +51,24 @@
   background-color: rgb(239, 238, 238);
   top: 0;
   left: 0;
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  padding: 20px;
+  gap: 10px;
+  position: fixed;
+}
+
+.userlogout-btn {
+  position: relative;
+  right: 5%;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  background: none;
+  border: none;
+  color: black;
 }
 
 .userlogout-btn .logo {
@@ -84,96 +102,6 @@
   border: none;
   display: none;
 }
-
-/* @media screen and (max-width: 768px) {
-  .admin-slidebar {
-    background: rgb(239, 238, 238);
-    height: 100%;
-    width: 10%;
-    position: fixed;
-    left: 0;
-    top: 9%;
-  }
-
-  .userdata-container {
-    margin-left: 10%;
-    height: 100vh;
-  }
-
-  .userdata-btn {
-    cursor: pointer;
-    background: none;
-    border: none;
-    font-size: 16px;
-    padding: 7px;
-    gap: 20px;
-    position: relative;
-    right: 100%;
-  }
-
-  .dashboard-icon {
-    display: none;
-  }
-
-  .userdata-head {
-    display: none;
-  }
-
-  .user-list {
-    list-style: none;
-  }
-
-  .dashboard-icon:hover {
-    font-size: 20px;
-    color: rgb(2, 2, 70);
-    font-weight: bold;
-  }
-
-  .user-profile .userheader {
-    position: absolute;
-    left: 10%;
-    letter-spacing: 2px;
-    color: goldenrod;
-    font-variant: small-caps;
-    font-size: 1.5rem;
-  }
-
-  .user-profile .userheader .caps {
-    font-weight: bold;
-    color: rgb(2, 2, 73);
-    font-size: 2rem;
-  }
-
-  .user-profile {
-    background-color: rgb(239, 238, 238);
-  }
-
-  .userlogout-btn .logo {
-    font-size: 25px;
-    color: #023265;
-    cursor: pointer;
-  }
-
-  .userlogout-btn .logoutbutton {
-    font-size: 25px;
-    color: darkred;
-    cursor: pointer;
-  }
-
-  .user-profile .username {
-    font-size: 17px;
-  }
-
-  .user-list .dashboardicons {
-    font-size: 25px;
-    color: black;
-    cursor: pointer;
-  } 
-}
-    
-  */
-
-
 
 @media only screen and (min-width:320px) and (max-width:768px) {
   .sidebarmenu-btn{
@@ -216,9 +144,60 @@
   }
 }
 
-@media only screen and (min-width:769px) and (max-width:1024px) {
+@media only screen and (min-width:769px) and (max-width:1009px){
+  .admin-slidebar {
+    background: rgb(239, 238, 238);
+    height: 100vh;
+    width: 10%;
+    position: fixed;
+    left: 0;
+    top: 9%;
+  }
+
+  .userdata-head{
+    display: none;
+  }
+
+  .dashboard-icon{
+    display: none;
+  }
+
+  .user-list{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+    right: 30px;
+  }
+
+  .userdata-container {
+    margin-left: 10%;
+    height: 100vh;
+  }
+
+  .user-profile .userheader {
+    position: absolute;
+    left: 10%;
+    letter-spacing: 2px;
+    color: goldenrod;
+    font-variant: small-caps;
+    font-size: 1.5rem;
+  }
+
+}
+
+@media only screen and (min-width:1010px) and (max-width:1024px) {
   .sidebarmenu-btn{
     display: none;
+  }
+
+  .admin-slidebar {
+    background: rgb(239, 238, 238);
+    height: 100vh;
+    width: 20%;
+    position: fixed;
+    left: 0;
+    top: 8%;
   }
 
 }
