--- a/Insurance-app-main/src/Components/UserDashboard/User.css
+++ b/Insurance-app-main/src/Components/UserDashboard/User.css
@@ -2,34 +2,10 @@
     height: 100vh;
 }
 
-.user-profile {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-    padding: 20px;
-    gap: 10px;
-    position: fixed;
-    left: 0;
-}
-
-.userlogout-btn {
-    position: relative;
-    right: 5%;
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    background: none;
-    border: none;
-    color: black;
-}
-
 .user-table {
-    position: relative;
     border-collapse:collapse;
     margin: auto;
     width: 100%;
-    top: 15%;
     box-shadow: 1px 7px 15px gainsboro;
 }
 
@@ -58,7 +34,7 @@
 }
 
 .userbtn .user-btn {
-    background-color: rgb(3, 3, 86);
+    background-color: rgb(4, 4, 90);
     color:white;
     width: 150px;
     border-radius: 7px;
@@ -68,30 +44,8 @@
     background:rgb(2, 2, 112);
 }
 
-.userbtn{
-    position: relative;
-    top: 15%;
-}
-
-.file-input {
-    display: none;
-}
-
-.file-label {
-    background-color: #007bff;
-    color: white;
-    padding: 10px 15px;
-    border-radius: 5px;
-    cursor: pointer;
-    display: inline-block;
-    font-weight: bold;
-}
-
 .user-headerpage {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    top: 15%;
+   padding: 50px;
 }
 
 .head{
@@ -103,20 +57,50 @@
     font-weight: bold;
 }
 
-@media screen and (max-width: 768px){
+.userbutton{
+    background: none;
+    border: none;
+}
+
+.user-edit-btn{
+    background: none;
+    border: none;
+}
+
+.userbutton .view-btn{
+    font-size: 30px;
+    color: green;
+    cursor: pointer;
+}
+
+.user-edit-btn .user-editbtn{
+    font-size: 30px;
+    color: orange;
+    cursor: pointer;
+}
+
+@media only screen and (min-width:319px) and (max-width:500px) {
     
     .user-table {
-        position: relative;
         border-collapse:collapse;
         margin: auto;
-        width: 80%;
-        top: 15%;
+        width: 100%;
         box-shadow: 1px 7px 15px gainsboro;
+    }
+
+    .userdata-container {
+        margin-left: 0% !important;
+        height: 100vh;
+    }  
+
+    .usertable-container{
+        padding: 0 20px 0 20px;
+        overflow-y: auto;
     }
     
     .user-table th {
-        padding: 12px;
-        font-size: 16px;
+        padding: 8px;
+        font-size: 12px;
         text-transform: uppercase;
         letter-spacing: 1px;
         background-color: #023265;
@@ -125,21 +109,21 @@
     }
     
     .user-table td {
-        font-size: 17px;
+        font-size: 14px;
         font-weight: 200;
         font-family: "Poppins",sans-serif;
     }
     
     .user-table tbody td{
-        padding: 20px;
+        padding: 5px;
     }
     
     .user-table tbody tr:hover {
         background:  rgb(221, 220, 220);
     }
     
-    .user-btn {
-        background-color: rgb(3, 3, 86);
+    .userbtn .user-btn {
+        background-color: rgb(4, 4, 90);
         color:white;
         width: 150px;
         border-radius: 7px;
@@ -149,38 +133,138 @@
         background:rgb(2, 2, 112);
     }
     
-    .userbtn{
-        position: relative;
-        top: 15%;
-    }
-    
-    .file-input {
-        display: none;
-    }
-    
-    .file-label {
-        background-color: #007bff;
-        color: white;
-        padding: 10px 15px;
-        border-radius: 5px;
-        cursor: pointer;
-        display: inline-block;
-        font-weight: bold;
-    }
-    
     .user-headerpage {
-        display: flex;
-        justify-content: center;
-        position: relative;
-        top: 15%;
+       padding: 30px;
     }
     
     .head{
-        font-weight: 700;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        font-size: 17px;
+        font-weight: bold;
     }
     
     .username{
         color: black;
         font-weight: bold;
     }
+    
+    .userbutton{
+        background: none;
+        border: none;
+    }
+    
+    .user-edit-btn{
+        background: none;
+        border: none;
+    }
+    
+    .userbutton .view-btn{
+        font-size: 20px;
+        color: green;
+        cursor: pointer;
+    }
+    
+    .user-edit-btn .user-editbtn{
+        font-size: 20px;
+        color: orange;
+        cursor: pointer;
+    }
+
+}
+
+@media only screen and (min-width:501px) and (max-width:768px) {
+    
+    .user-table {
+        border-collapse:collapse;
+        margin: auto;
+        width: 100%;
+        box-shadow: 1px 7px 15px gainsboro;
+    }
+
+    .userdata-container {
+        margin-left: 0% !important;
+        height: 100vh;
+    }  
+
+    .usertable-container{
+        padding: 0 20px 0 20px;
+        overflow-y: auto;
+    }
+    
+    .user-table th {
+        padding: 8px;
+        font-size: 12px;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        background-color: #023265;
+        color: white;
+        border-bottom: 1px solid gainsboro;
+    }
+    
+    .user-table td {
+        font-size: 14px;
+        font-weight: 200;
+        font-family: "Poppins",sans-serif;
+    }
+    
+    .user-table tbody td{
+        padding: 5px;
+    }
+    
+    .user-table tbody tr:hover {
+        background:  rgb(221, 220, 220);
+    }
+    
+    .userbtn .user-btn {
+        background-color: rgb(4, 4, 90);
+        color:white;
+        width: 150px;
+        border-radius: 7px;
+    }
+    
+    .user-btn:hover{
+        background:rgb(2, 2, 112);
+    }
+    
+    .user-headerpage {
+       padding: 30px;
+    }
+    
+    .head{
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        font-size: 17px;
+        font-weight: bold;
+    }
+    
+    .username{
+        color: black;
+        font-weight: bold;
+    }
+    
+    .userbutton{
+        background: none;
+        border: none;
+    }
+    
+    .user-edit-btn{
+        background: none;
+        border: none;
+    }
+    
+    .userbutton .view-btn{
+        font-size: 20px;
+        color: green;
+        cursor: pointer;
+    }
+    
+    .user-edit-btn .user-editbtn{
+        font-size: 20px;
+        color: orange;
+        cursor: pointer;
+    }
+
 }
