--- a/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslip.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslip.css
@@ -14,30 +14,30 @@
    margin-top: 30px;
  }
  
- /* Form Section */
+
  .payslip-field {
    display: flex;
    flex-direction: column;
    background-color: #f4f4f4;
    border-radius: 12px;
    padding: 30px;
-   max-width: 500px;
    margin: 0 auto;
    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
-   gap: 20px;
-   margin-top: 60px;
-   margin-bottom: 80px;
+   gap: 10px;
+   width: 500px;
  }
  
  .input-fields {
    display: flex;
    flex-direction: column;
+   margin: auto;
  }
  
  .input-fields label {
    font-weight: 600;
    margin-bottom: 6px;
    color: #333;
+
  }
  
  .payslipinput {
@@ -47,6 +47,8 @@
    border: 1px solid #ccc;
    outline: none;
    transition: border-color 0.3s ease;
+   width: 300px;
+   margin: auto;
  }
  
  .payslipinput:focus {
@@ -64,6 +66,7 @@
    cursor: pointer;
    transition: background-color 0.3s ease;
    margin-top: 10px;
+
  }
  
  .payslip-button:hover {
@@ -107,7 +110,10 @@
  .employee-details {
    display: flex;
    justify-content: space-between;
-   margin: 30px 0;
+   margin: 10px 0;
+ }
+ .employee-details h4 {
+   border-bottom: 1px solid #e1e1e1;
  }
  
  .pf-number {
@@ -139,28 +145,421 @@
    justify-content: space-around;
    margin-top: 20px;
  }
- 
- .pdf-button-download .pdfbutton:hover {
-   background-color:yellow;
-   color:black;
-   
-  }
-  .pdf-button-download .pdfbutton {
-    background-color: #002f6c;
-    border-radius: 40px;
-    margin-left: 380px;
-    border: none;
-    height: 70px;
-    width: 250px;
-    padding: 10px;
-    color: white;
+ .pdf-button-download .pdfbutton {
+  display: flex; 
+  align-items: center;
+  background-color: #002f6c;
+  border-radius: 7px;
+  color: white;
+  padding: 10px 16px;
+  gap: 8px;
+  border: none;
+  cursor: pointer;
+  margin-left: 370px;
+}
+.pdf-button-download .pdfbutton:hover {
+ background-color: rgb(34, 117, 149)
+}
+.pdf-icon
+{
+  color: red;
+}
+.pageback-icon
+{
+ font-size: 50px;
+ padding: 10px;
+}
+ @media screen and (min-width:319px) and (max-width:430px){
+   .payslip-design {
+     height: 100vh;
+     padding:60px 20px;
+      width: 900px;
+     font-family: 'Segoe UI', sans-serif;
+     margin-right: 50px;
+    }
+   .portal {
+     display: none;
+    }
+     .payslip-field {
+      border-radius: 12px;
+      padding: 30px;
+      width: 500px;
+      margin: 0 auto;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
+      gap: 20px;
+      margin-top: 60px;
+      margin-bottom: 80px;
+    }
+    
+  .input-fields label {
+      font-weight: 600;
+      margin-bottom: 6px;
+      color: #333;
+    }
+    
+    .payslipinput {
+      padding: 12px;
+      font-size: 15px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      outline: none;
+      transition: border-color 0.3s ease;
+    }
+    
+    .payslip-button {
+      align-self: center;
+      background-color: #002f6c;
+      color: white;
+      border: none;
+      padding: 12px 24px;
+      font-size: 14px;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      margin-top: 10px;
+      width: 100px;
+    }
+    
+    .heading-payslip {
+      width: 100%;
+      margin: 0 auto 60px auto;
+      padding: 30px;
+      border-radius: 12px;
+     }
+    
+    .company-header {
+      display: flex;
+      align-items: center;
+      color: white;
+      padding: 3px 6px;
+      border-radius: 4px;
+      gap: 10px;
+      width: 700px;
+      height: 50px;
+    }
+    
+    .company-header img {
+      height: 50px;
+      width: 50px;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+    
+    .payslip-month {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 18px;
+      color: #555;
+    }
+    
+    .employee-details {
+      display: flex;
+      flex-direction: column;
+      margin: 20px 0;
+      width:700px;
+    }
+    .employee-details h4 {
+     border-bottom: 1px solid #e1e1e1;
    }
- .pdf-icon
- {
-    color: red;
- }
- .pageback-icon
- {
-   font-size: 50px;
-   padding: 10px;
- }
+    .pf-number {
+      margin-right: 150px;
+      font-size: 15px;
+    }
+    
+    .heading-payslip h2 {
+      margin-top: 20px;
+      color: #2c3e50;
+    }
+    
+    .heading-payslip ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 20px 0;
+    }
+    
+    .heading-payslip ul li {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px 14px;
+      border-bottom: 1px solid #e1e1e1;
+      font-size: 16px;
+      color: #333;
+    }
+    
+    .button-for-payslip {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 20px;
+    }
+    .pageback-icon
+    {
+      font-size: 50px;
+      padding: 10px;
+    }
+    .title
+    {
+     font-size: 15px;
+    }
+   }
+   @media screen and (min-width:772px) and (max-width:1025px){
+     .payslip-design {
+       height: 100vh;
+        padding: 60px 20px;
+        width: 900px;
+       font-family: 'Segoe UI', sans-serif;
+      }
+     .portal {
+       display: none;
+      }
+       .payslip-field {
+        border-radius: 12px;
+        padding: 30px;
+        width: 500px;
+        margin: 0 auto;
+        box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
+        gap: 20px;
+        margin-top: 60px;
+        margin-bottom: 80px;
+      }
+      
+    .input-fields label {
+        font-weight: 600;
+        margin-bottom: 6px;
+        color: #333;
+      }
+      
+      .payslipinput {
+        padding: 12px;
+        font-size: 15px;
+        border-radius: 6px;
+        border: 1px solid #ccc;
+        outline: none;
+        transition: border-color 0.3s ease;
+      }
+      
+      .payslip-button {
+        align-self: center;
+        background-color: #002f6c;
+        color: white;
+        border: none;
+        padding: 12px 24px;
+        font-size: 14px;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        margin-top: 10px;
+        width: 100px;
+      }
+      
+      .heading-payslip {
+        width: 100%;
+        margin: 0 auto 60px auto;
+        padding: 30px;
+        border-radius: 12px;
+       }
+      
+      .company-header {
+        display: flex;
+        align-items: center;
+        color: white;
+        padding: 3px 6px;
+        border-radius: 4px;
+        gap: 10px;
+        width: 730px;
+        height: 50px;
+      }
+      
+      .company-header img {
+        height: 50px;
+        width: 50px;
+        object-fit: cover;
+        border-radius: 50%;
+      }
+      
+      .payslip-month {
+        text-align: center;
+        margin-top: 20px;
+        font-size: 18px;
+        color: #555;
+      }
+      
+      .employee-details {
+        display: flex;
+        flex-direction: column;
+        margin: 20px 0;
+        width:700px;
+      }
+      .employee-details h4 {
+       border-bottom: 1px solid #e1e1e1;
+     }
+      .pf-number {
+        margin-right: 150px;
+        font-size: 15px;
+      }
+      
+      .heading-payslip h2 {
+        margin-top: 20px;
+        color: #2c3e50;
+      }
+      
+      .heading-payslip ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 20px 0;
+      }
+      
+      .heading-payslip ul li {
+        display: flex;
+        justify-content: space-between;
+        padding: 10px 14px;
+        border-bottom: 1px solid #e1e1e1;
+        font-size: 16px;
+        color: #333;
+      }
+      
+      .button-for-payslip {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 20px;
+      }
+      .pageback-icon
+      {
+        font-size: 50px;
+        padding: 10px;
+      }
+      .title
+      {
+       font-size: 15px;
+      }
+     }
+     @media screen and (min-width:432px) and (max-width:770px){
+       .payslip-design {
+         height: 100vh;
+          padding: 60px 20px;
+          width: 900px;
+         font-family: 'Segoe UI', sans-serif;
+        }
+       .portal {
+         display: none;
+        }
+         .payslip-field {
+          border-radius: 12px;
+          padding: 30px;
+          width: 500px;
+          margin: 0 auto;
+          box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
+          gap: 20px;
+          margin-top: 60px;
+          margin-bottom: 80px;
+        }
+        
+      .input-fields label {
+          font-weight: 600;
+          margin-bottom: 6px;
+          color: #333;
+        }
+        
+        .payslipinput {
+          padding: 12px;
+          font-size: 15px;
+          border-radius: 6px;
+          border: 1px solid #ccc;
+          outline: none;
+          transition: border-color 0.3s ease;
+        }
+        
+        .payslip-button {
+          align-self: center;
+          background-color: #002f6c;
+          color: white;
+          border: none;
+          padding: 12px 24px;
+          font-size: 14px;
+          border-radius: 4px;
+          cursor: pointer;
+          transition: background-color 0.3s ease;
+          margin-top: 10px;
+          width: 100px;
+        }
+        
+        .heading-payslip {
+          width: 100%;
+          margin: 0 auto 60px auto;
+          padding: 30px;
+          border-radius: 12px;
+         }
+        
+        .company-header {
+          display: flex;
+          align-items: center;
+          color: white;
+          padding: 3px 6px;
+          border-radius: 4px;
+          gap: 10px;
+          width: 730px;
+          height: 50px;
+        }
+        
+        .company-header img {
+          height: 50px;
+          width: 50px;
+          object-fit: cover;
+          border-radius: 50%;
+        }
+        
+        .payslip-month {
+          text-align: center;
+          margin-top: 20px;
+          font-size: 18px;
+          color: #555;
+        }
+        
+        .employee-details {
+          display: flex;
+          flex-direction: column;
+          margin: 20px 0;
+          width:700px;
+        }
+        .employee-details h4 {
+         border-bottom: 1px solid #e1e1e1;
+       }
+        .pf-number {
+          margin-right: 150px;
+          font-size: 15px;
+        }
+        
+        .heading-payslip h2 {
+          margin-top: 20px;
+          color: #2c3e50;
+        }
+        
+        .heading-payslip ul {
+          list-style-type: none;
+          padding: 0;
+          margin: 20px 0;
+        }
+        
+        .heading-payslip ul li {
+          display: flex;
+          justify-content: space-between;
+          padding: 10px 14px;
+          border-bottom: 1px solid #e1e1e1;
+          font-size: 16px;
+          color: #333;
+        }
+        
+        .button-for-payslip {
+          display: flex;
+          justify-content: space-around;
+          margin-top: 20px;
+        }
+        .pageback-icon
+        {
+          font-size: 50px;
+          padding: 10px;
+        }
+        .title
+        {
+         font-size: 15px;
+        }
+       }
