--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Users.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Users.css
@@ -26,6 +26,7 @@
     border-collapse: collapse;
     margin: auto;
     width: 100%;
+    cursor: pointer;
     box-shadow: 1px 7px 15px gainsboro;
 }
 
@@ -237,6 +238,7 @@
         border-collapse:collapse;
         margin: auto;
         width: 100%;
+        cursor: pointer;
         box-shadow: 1px 7px 15px gainsboro;
     }
 
@@ -342,6 +344,7 @@
         border-collapse:collapse;
         margin: auto;
         width: 100%;
+        cursor: pointer;
         box-shadow: 1px 7px 15px gainsboro;
     }
 
