--- a/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Adminpage.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Adminpage.css
@@ -22,6 +22,7 @@
     border-collapse:collapse;
     margin: auto;
     width: 100%;
+    cursor: pointer;
     box-shadow: 1px 7px 15px gainsboro;
 }
 
@@ -237,6 +238,7 @@
         /* border: 1px solid black; */
         border-collapse:collapse;
         margin: auto;
+        cursor: pointer;
         box-shadow: 1px 7px 15px gainsboro;
     }
 
@@ -351,6 +353,7 @@
         border-collapse:collapse;
         margin: auto;
         width: 100%;
+        cursor: pointer;
         box-shadow: 1px 7px 15px gainsboro;
     }
 
