--- a/Insurance-app-main/src/Components/Login/Login.css
+++ b/Insurance-app-main/src/Components/Login/Login.css
@@ -2,6 +2,8 @@
     background-image: url('../../../public/bg-2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    height:100vh;
+    width:100vw
 }
 
 .btn{
@@ -61,10 +63,6 @@
     border: 1px solid #ccc;
     background-color: rgba(255, 255, 255, 0.9);
     transition: border 0.3s ease, box-shadow 0.3s ease;
-  }
-  .label
-  {
-    font-size: 30px;
   }
 
 
