--- a/Insurance-app-main/src/Components/Register/Register.css
+++ b/Insurance-app-main/src/Components/Register/Register.css
@@ -2,6 +2,8 @@
     background-image: url("../../../public/bg-2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100vh;
+     width: 100vw
 }
 
 .register-form{
@@ -10,7 +12,7 @@
     justify-content: center;
     align-items: center;
 }
-.form-control-login {
+.form-control-register {
     width: 100%;
     padding: 8px 11px;
     font-size: 15px;
