--- a/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslip.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslip.css
@@ -266,10 +266,10 @@
   margin-right: 5px;
   color: #444;
 }
-.signature
+/* .signature
 {
   margin-left: 830px;
-}
+} */
 .company h3,p
 {
   color:  #2c3e50;
@@ -492,10 +492,10 @@
   margin-right: 5px;
   color: #444;
 }
-.signature
+/* .signature
 {
   margin-left: 830px;
-}
+} */
 .company h3,p
 {
   color:  #2c3e50;
@@ -786,10 +786,10 @@
       margin-right: 5px;
       color: #444;
     }
-    .signature
+    /* .signature
     {
       margin-left: 830px;
-    }
+    } */
     .company h3,p
     {
       color:  #2c3e50;
@@ -1079,10 +1079,10 @@
       margin-right: 5px;
       color: #444;
     }
-    .signature
+    /* .signature
     {
       margin-left: 830px;
-    }
+    } */
     .company h3,p
     {
       color:  #2c3e50;
