--- a/Insurance-app-main/src/Components/Login/Login.css
+++ b/Insurance-app-main/src/Components/Login/Login.css
@@ -74,11 +74,11 @@
     .button-container .button-group {
         width: 180px;
     }
-    .form-control-login
+    /* .form-control-login
     {
         height: 35px;
         font-size: 25px;
-    }
+    } */
    
 }
 
