--- a/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Dialogbox/Detailspopup.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Dialogbox/Detailspopup.css
@@ -33,23 +33,27 @@
 @media only screen and (min-width:319px) and (max-width:400px){
     .create-content{
         width: 80%;
+        height: 75%;
     }
 }
 
 @media only screen and (min-width:401px) and (max-width:500px){
     .create-content{
         width: 60%;
+        height: 75%;
     }
 }
 
 @media only screen and (min-width:501px) and (max-width:700px){
     .create-content{
         width: 55%;
+        height: 75%;
     }
 }
 
-@media only screen and (min-width:701px) and (max-width:800px){
+@media only screen and (min-width:701px) and (max-width:940px){
     .create-content{
-        width: 40%;
+        width: 45%;
+        height: 75%;
     }
 }
